# mirea-teacher-schedule-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
bot/: ImportantDays.py  InlineStep.py  __main__.py  config.py  construct.py  decode.py  formatting.py  handlers.py  info.py  inline.py  lazy_logger.py  main.py  setup.py  start.py
bot/db/: database.py  migrate.py  sqlite.py
bot/fetch/: models.py  schedule.py  search.py
bot/formats/: decode.py  formatting.py  parse.py
bot/handlers/: ImportantDays.py  construct.py  events.py  favorite.py  fetch.py  handler.py  handlers.py  info.py  inline.py  send.py  states.py
bot/logs/: lazy_logger.py
bot/parse/: formating.py  semester.py
bot/schedule/: week.py
handlers/: bot.py  teacher_parser.py
inline/: inline_buttons.py
