[tool.poetry]
name = "mirea-teacher-schedule-bot"
version = "0.1.0"
description = ""
authors = ["Slava Kuryaev <92830706+necrosskull@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mirea_teacher_schedule_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^13.15"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
python-logging-loki = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
