[tool.poetry]
name = "mirea-teacher-schedule-bot"
version = "0.1.0"
description = ""
authors = ["Slava Kuryaev <92830706+necrosskull@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "mirea_teacher_schedule_bot" }]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.6"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
python-logging-loki = "^0.3.1"
peewee = "^3.16.2"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
